<resources>
    <string name="app_name">NutriApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email_format">Email: %1$s</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="location_format">%1$s</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="Don_t_have_an_account" />
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="unit_prompt">Select unit</string>
    <string name="cardio_exercise_description">Click to start the exercise</string>

    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_click_here">Already have an Account? Click Here</string>
    <string name="provide_the_email">Provide the Email</string>
    <string name="enter_your_email_address_below">Enter your email address below</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="click_here">Click Here</string>
    <string name="request_password_reset">REQUEST PASSWORD RESET</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="back">Back</string>
    <string name="google">Google</string>
    <string name="change_password">Change Password</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit">Edit</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="saved">Saved</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="icloud_com">icloud.com</string>
    <string name="cancel">Cancel</string>
    <string name="add_meal">Add Meal</string>
    <string name="calories_0">Calories: 0</string>
    <string name="graph_placeholder">Graph Placeholder</string>
    <string name="home">Home</string>
    <string name="nutrition">Nutrition</string>
    <string name="calories">Calories</string>
    <string name="fitness">Fitness</string>
    <string name="account">Account</string>
    <string name="steps_0">Steps: 0</string>
    <string name="calories_result">Calories needed: %1$.2f</string>
    <string name="list_of_foods_consumed">List of Foods Consumed</string>
    <string name="add_food">Add Food</string>
    <string name="meal_name">Meal Name</string>
    <string name="add_meal_title">Add a Meal</string>
    <string name="add">Add</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_invalid_number">Invalid number format</string>
    <string name="add_a_meal">Add a Meal</string>
    <string name="enter_age">Enter Age</string>
    <string name="title_activity_exercises">ExercisesActivity</string>
    <string name="exercise_duration">%1$d mins</string>
    <string name="workout">Workout</string>
    <string name="exercise_image">exercise_image</string>
    <string name="settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="start">Start</string>
    <string name="nutritional_information_will_be_displayed_here">Nutritional information will be displayed here.</string>
    <string name="title_activity_summary">SummaryActivity</string>
</resources>